added flexboxgrid in _index.scss

--- a/src/assets/scss/_index.scss
+++ b/src/assets/scss/_index.scss
@@ -1,4 +1,5 @@
 @import "0_helpers/normalize.scss";
+@import "0_helpers/flexboxgrid.scss";
 @import "0_helpers/variables.scss";
 
 @import "1_layout/layout.scss";
