--- a/src/assets/scss/0_helpers/variables.scss
+++ b/src/assets/scss/0_helpers/variables.scss
@@ -3,6 +3,7 @@ $rem: 0.0625rem;
 //--colors
 $main-text: rgba(0, 0, 0, 0.87);
 $main-bg-color: #ffffff;
+$second-bg-color: #fafafa;
 $pure-black: #000;
 $light-black: #212121;
 $grey: #9e9e9e;
@@ -16,6 +17,7 @@ $pure-white: #ffffff;
 $support-block-background: #00838f;
 $lower-blocks-background: #37474f;
 $up-button-background: #455a64;
+$copyright-bg-color: #263238;
 
 //--fonts
 $main-font-family: 'Roboto', sans-serif;
