added components to header

--- a/src/assets/scss/0_helpers/variables.scss
+++ b/src/assets/scss/0_helpers/variables.scss
@@ -7,6 +7,7 @@ $second-bg-color: #fafafa;
 $pure-black: #000;
 $light-black: #212121;
 $grey: #9e9e9e;
+$dark-grey: #444;
 $strange-gray: #bdbdbd;
 $services-header: #00838f;
 $pink: #e91e63;
@@ -19,7 +20,8 @@ $lower-blocks-background: #37474f;
 $up-button-background: #455a64;
 $copyright-bg-color: #263238;
 
-//--fonts
+//--font-size
 $main-font-family: 'Roboto', sans-serif;
 $main-font-size: 0.0625rem;
+$title-font-size: 2.1rem;
 $line-height: 1;
