--- a/src/assets/scss/2_blocks/header-block.scss
+++ b/src/assets/scss/2_blocks/header-block.scss
@@ -1,5 +1,16 @@
 .page-header {
+  @extend %convex-lower-shadow;
+
   height: 80px;
   background-color: $second-bg-color;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 0 1em;
+  }
 }
