--- a/src/assets/scss/3_components/header/navigation.scss
+++ b/src/assets/scss/3_components/header/navigation.scss
@@ -20,7 +20,8 @@
       .arrow-icon {
         display: inline-block;
         position: absolute;
-        top: 0;
+        right: 0;
+        top: 36%;
       }
     }
   }
