--- a/src/assets/scss/3_components/header/navigation.scss
+++ b/src/assets/scss/3_components/header/navigation.scss
@@ -13,15 +13,15 @@
       transition: .6s;
     }
 
-    a {
-      padding: 2.19em 1.2em;
-    }
-
     .arrow-icon {
       display: inline-block;
       position: absolute;
       right: 0;
       top: 36%;
     }
+  }
+
+  &__link {
+    padding: 2.19em 1.2em;
   }
 }
