--- a/src/assets/scss/0_helpers/extends.scss
+++ b/src/assets/scss/0_helpers/extends.scss
@@ -1,6 +1,6 @@
 //Шаблонные селекторы
 
-%convex-lower-shadow { // нижняя выпуклая тень
+%convex-lower-shadow { // выпуклая тень
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
               0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
