--- a/src/assets/scss/_index.scss
+++ b/src/assets/scss/_index.scss
@@ -9,3 +9,4 @@
 
 @import "3_components/header/logo.scss";
 @import "3_components/header/navigation.scss";
+@import "3_components/header/dropdown-block.scss";
