added new mixin not-last-child

--- a/src/assets/scss/3_components/header/dropdown-block.scss
+++ b/src/assets/scss/3_components/header/dropdown-block.scss
@@ -5,8 +5,9 @@
   top: 56px;
   text-align: left;
   background: $pure-white;
-  border-radius: .1em;
+  border-radius: .12em;
   padding: .7em;
+  font-size: 1rem;
 
   &__element {
     display: list-item;
