more styled dropdown-block

--- a/src/assets/scss/3_components/header/navigation.scss
+++ b/src/assets/scss/3_components/header/navigation.scss
@@ -3,6 +3,7 @@
   &__element {
     display: inline-block;
     position: relative;
+    cursor: pointer;
 
     &:last-child {
       padding-right: 0;
