--- a/src/assets/scss/3_components/header/dropdown-block.scss
+++ b/src/assets/scss/3_components/header/dropdown-block.scss
@@ -1,18 +1,20 @@
 .dropdown-block {
   @extend %convex-lower-shadow;
-  min-width: 150%;
+  min-width: 170%;
+  z-index: 10;
   position: absolute;
   top: 56px;
   text-align: left;
   background: $pure-white;
   border-radius: .12em;
-  padding: .7em;
-  font-size: 1rem;
+  font-size: .9rem;
+  cursor: pointer;
 
   &__element {
     display: list-item;
-    &:not(:last-child) {
-      padding-bottom: .7em;
+    padding: 1em .5em 1em 1em;
+    &:hover {
+      background-color: lightgray;
     }
   }
 }
