--- a/src/assets/scss/1_layout/layout.scss
+++ b/src/assets/scss/1_layout/layout.scss
@@ -82,6 +82,10 @@ h5 {
   font-weight: 400;
 }
 
+.main-wrapper {
+  height: 100vh;
+}
+
 .container, .container-fluid {
   background-color: transparent;
 
