--- a/src/assets/scss/3_components/header/dropdown-block.scss
+++ b/src/assets/scss/3_components/header/dropdown-block.scss
@@ -13,8 +13,10 @@
   &__element {
     display: list-item;
     padding: 1em .5em 1em 1em;
+
     &:hover {
       background-color: lightgray;
+      transition: .6s;
     }
   }
 }
