added width to helpers

--- a/src/assets/scss/0_helpers/variables.scss
+++ b/src/assets/scss/0_helpers/variables.scss
@@ -25,3 +25,32 @@ $main-font-family: 'Roboto', sans-serif;
 $main-font-size: 0.0625rem;
 $title-font-size: 2.1rem;
 $line-height: 1;
+
+//--adaptation width
+$desktop-sm: 1560px;
+$desktop-xs: 1440px;
+$desktop-md-desctruct-point: 1281px;
+$desktop-md: 1280px;
+$tablet-upper-big-max: 1170px;
+$tablet-upper-max-desctruct-point: 1025px;
+$tablet-upper-max: 1024px; // iPad mini landscape
+$tablet-max-desctruct-point: 993px;
+$tablet-max: 992px;
+$mobile-upper-max-desctruct-point: 855px;
+$mobile-upper-max: 854px; // nokia n9 landscape
+$mobile-max-desctruct-point: 769px;
+$mobile-max: 768px;
+$mobile-super-md: 656px;
+$mobile-upper-md-desctruct-point: 601px;
+$mobile-upper-md: 600px; // nexus 7 portrait
+$mobile-md-destruct-point: 569px;
+$mobile-md: 568px; // iPhone 5 landscape
+$mobile-upper-sm: 490px;
+$mobile-sm-desctruct-point: 481px;
+$mobile-sm: 480px;
+$mobile-between-sm-xs: 420px;
+$mobile-xs-destruct-point: 361px;
+$mobile-xs: 360px;
+
+
+
