--- a/src/assets/scss/2_blocks/header-block.scss
+++ b/src/assets/scss/2_blocks/header-block.scss
@@ -12,5 +12,9 @@
     max-width: 1280px;
     margin: 0 auto;
     padding: 0 1em;
+
+    @media screen and (max-width: $mobile-max) {
+      justify-content: center;
+    }
   }
 }
