changeed dropdown-block position

--- a/src/assets/scss/3_components/header/dropdown-block.scss
+++ b/src/assets/scss/3_components/header/dropdown-block.scss
@@ -3,7 +3,8 @@
   min-width: 170%;
   z-index: 10;
   position: absolute;
-  top: 56px;
+  top: 80%;
+  right: 0;
   text-align: left;
   background: $pure-white;
   border-radius: .12em;
