--- a/src/assets/scss/_index.scss
+++ b/src/assets/scss/_index.scss
@@ -11,3 +11,4 @@
 @import "3_components/header/logo.scss";
 @import "3_components/header/navigation.scss";
 @import "3_components/header/dropdown-block.scss";
+@import "3_components/header/mobile-menu.scss";
