--- a/src/assets/scss/3_components/header/navigation.scss
+++ b/src/assets/scss/3_components/header/navigation.scss
@@ -30,7 +30,39 @@
     padding: 2.19em 1.2em;
   }
 
-  @media screen and (max-width: $mobile-max) {
+  &__close-btn {
     display: none;
+  }
+
+  @media screen and (max-width: $mobile-max) { // transformation to mobile menu
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
+                0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    position: fixed;
+    list-style:none;
+    padding: 10px;
+    margin: 0;
+    box-sizing: border-box;
+    width: 300px;
+    background-color: #eee;
+    height: 100%;
+    top: 0;
+    transition: left .4s;
+    z-index: 2;
+    -webkit-transform: translateZ(0);
+    -webkit-backface-visibility: hidden;
+
+    &__close-btn {
+      display: block;
+      margin-left: auto;
+      padding: 0;
+    }
+
+    &--mobile-active {
+      left: 0;
+    }
+
+    &--mobile-inactive {
+      left: -330px;
+    }
   }
 }
