--- a/src/assets/scss/3_components/header/navigation.scss
+++ b/src/assets/scss/3_components/header/navigation.scss
@@ -23,6 +23,10 @@
       position: absolute;
       right: 0;
       top: 36%;
+      transform: rotate(-180deg);
+      transition: transform .1s linear;
+
+      &--open { transform: rotate(0deg); }
 
       @media screen and (max-width: $mobile-max) {
         position: inherit;
