deleted border from active button

--- a/src/assets/scss/3_components/header/navigation.scss
+++ b/src/assets/scss/3_components/header/navigation.scss
@@ -75,6 +75,8 @@
       padding: 0;
       padding-top: 10px;
       padding-right: 10px;
+
+      &:active, &:focus { outline: none !important; }
     }
 
     &--mobile-active {
