completed all base preparations fro slider

--- a/src/assets/scss/_index.scss
+++ b/src/assets/scss/_index.scss
@@ -7,7 +7,9 @@
 @import "1_layout/layout.scss";
 
 @import "2_blocks/header-block.scss";
+@import "2_blocks/slider-block.scss";
 
 @import "3_components/header/logo.scss";
 @import "3_components/header/navigation.scss";
 @import "3_components/header/dropdown-block.scss";
+@import "3_components/slider/slider.scss";
