--- a/src/assets/scss/3_components/slider/slider.scss
+++ b/src/assets/scss/3_components/slider/slider.scss
@@ -8,4 +8,12 @@
     width: 100%;
     height: 100%;
   }
+
+  &__slides {
+
+    li {
+      background-image: url('/../../../media/images/slider/guy.png');
+
+    }
+  }
 }
