--- a/src/assets/scss/2_blocks/header-block.scss
+++ b/src/assets/scss/2_blocks/header-block.scss
@@ -1,6 +1,8 @@
 .page-header {
   @extend %convex-lower-shadow;
 
+  position: fixed;
+  width: 100%;
   height: 80px;
   background-color: $second-bg-color;
 
