--- a/src/assets/scss/_index.scss
+++ b/src/assets/scss/_index.scss
@@ -2,6 +2,7 @@
 @import "0_helpers/variables.scss";
 @import "0_helpers/extends.scss";
 @import "0_helpers/mixins.scss";
+@import "0_helpers/buttons.scss";
 
 // libs
 @import "~bootstrap-4-grid";
