--- a/src/assets/scss/0_helpers/variables.scss
+++ b/src/assets/scss/0_helpers/variables.scss
@@ -26,6 +26,10 @@ $main-font-size: 0.0625rem;
 $title-font-size: 2.1rem;
 $line-height: 1;
 
+// system
+$default-radius: 3px;
+$percent-saturation: 30;
+
 //--adaptation width
 $desktop-sm: 1560px;
 $desktop-xs: 1440px;
