--- a/src/assets/scss/0_helpers/variables.scss
+++ b/src/assets/scss/0_helpers/variables.scss
@@ -19,6 +19,7 @@ $support-block-background: #00838f;
 $lower-blocks-background: #37474f;
 $up-button-background: #455a64;
 $copyright-bg-color: #263238;
+$primary-button: #ffab40;
 
 //--font-size
 $main-font-family: 'Roboto', sans-serif;
