--- a/src/assets/scss/0_helpers/variables.scss
+++ b/src/assets/scss/0_helpers/variables.scss
@@ -11,7 +11,9 @@ $dark-grey: #444;
 $strange-gray: #bdbdbd;
 $services-header: #00838f;
 $pink: #e91e63;
+$raspberry: #8e24aa;
 $deep-purple: #673ab7;
+$light-blue: #3949ab;
 $red: #f44336;
 $yellow: #ff9800;
 $pure-white: #ffffff;
