--- a/src/assets/scss/_index.scss
+++ b/src/assets/scss/_index.scss
@@ -17,3 +17,4 @@
 @import "3_components/header/navigation.scss";
 @import "3_components/header/dropdown-block.scss";
 @import "3_components/slider/slider.scss";
+@import "3_components/slider/indicators.scss";
