--- a/src/assets/scss/3_components/slider/slider.scss
+++ b/src/assets/scss/3_components/slider/slider.scss
@@ -22,6 +22,7 @@
     width: 100%;
     background-position: center;
     background-size: cover;
+    background-attachment: fixed;
   }
 
   &__info {
@@ -32,6 +33,10 @@
     text-align: right;
     color: $pure-white;
 
+    @media screen and (max-width: $desktop-md) {
+      left: 20%;
+    }
+
     h1, h2, h5 {
       margin: 0;
       margin-bottom: 10*$rem;
@@ -39,7 +44,13 @@
 
     h5 { margin-bottom: 50*$rem; }
 
-    h1 { text-transform: uppercase; }
+    h1 {
+      text-transform: uppercase;
+
+      @media screen and (max-width: $desktop-md) {
+        font-size: 3.5rem;
+      }
+    }
 
     h2, h5 { font-weight: 300; }
   }
