media for indicators dota

--- a/src/assets/scss/3_components/slider/indicators.scss
+++ b/src/assets/scss/3_components/slider/indicators.scss
@@ -10,6 +10,11 @@
     border-radius: 50%;
     cursor: pointer;
     background-color: $pure-white;
+
+    @media (max-width: $mobile-upper-max) {
+      height: 19*$rem;
+      width: 19*$rem;
+    }
     
     &--active {
       background-color: $red;
