added new components && change some styles

--- a/src/assets/scss/_index.scss
+++ b/src/assets/scss/_index.scss
@@ -12,6 +12,7 @@
 
 @import "2_blocks/header-block.scss";
 @import "2_blocks/slider-block.scss";
+@import "2_blocks/features.scss";
 
 @import "3_components/header/logo.scss";
 @import "3_components/header/navigation.scss";
