--- a/src/assets/scss/3_components/slider/slider.scss
+++ b/src/assets/scss/3_components/slider/slider.scss
@@ -28,7 +28,7 @@
     width: 100%;
     background-position: center;
     background-size: cover;
-    background-attachment: fixed;
+    //background-attachment: fixed;
     background-repeat: no-repeat;
 
     @media screen and (max-width: $mobile-upper-max) {
