--- a/src/assets/scss/_index.scss
+++ b/src/assets/scss/_index.scss
@@ -15,4 +15,4 @@
 @import "3_components/header/dropdown-block.scss";
 @import "3_components/slider/slider.scss";
 @import "3_components/slider/indicators.scss";
-@import "3_components/features/box.scss";
+@import "3_components/features/info-block";
