added response to info block

--- a/src/assets/scss/3_components/features/info-block.scss
+++ b/src/assets/scss/3_components/features/info-block.scss
@@ -2,8 +2,14 @@
   display: flex;
   flex-flow: column;
   padding: 80px;
-  width: 25%;
   color: $pure-white;
+
+  @media(max-width: $desktop-xs) {
+    padding: 40px;
+    flex-basis: 50%;
+  }
+
+  @media(max-width: $mobile-max) { flex-basis: 100%; }
 
   &__icon {
     width: 24px;
@@ -17,12 +23,8 @@
 
   &__title {
 
-    h5 {
-      margin-left: 0;
-    }
+    h5 { margin-left: 0; }
   }
 
-  &__text {
-    line-height: 1.5;
-  }
+  &__text { line-height: 1.5; }
 }
