added new components & changed styles for layout container

--- a/src/assets/scss/_index.scss
+++ b/src/assets/scss/_index.scss
@@ -8,7 +8,8 @@
 
 @import "2_blocks/header-block.scss";
 @import "2_blocks/slider-block.scss";
-@import "2_blocks/features-block";
+@import "2_blocks/features-block.scss";
+@import "2_blocks/about-block.scss";
 
 @import "3_components/header/logo.scss";
 @import "3_components/header/navigation.scss";
