--- a/src/assets/scss/3_components/features/info-block.scss
+++ b/src/assets/scss/3_components/features/info-block.scss
@@ -16,7 +16,10 @@
 
   &__title {
 
-    h5 { margin-left: 0; }
+    h5 {
+      margin-left: 0;
+      margin-right: 0;
+    }
   }
 
   &__text { line-height: 1.5; }
