added more styles for about block

--- a/src/assets/scss/0_helpers/buttons.scss
+++ b/src/assets/scss/0_helpers/buttons.scss
@@ -16,7 +16,7 @@
 
     $primed-btn: (
         btn--primary: $primary-button,
-        btn--important: $red,
+        btn--important: $light-red,
         btn--lower-blocks: $lower-blocks-background,
     );
 
