--- a/src/assets/scss/0_helpers/variables.scss
+++ b/src/assets/scss/0_helpers/variables.scss
@@ -15,6 +15,7 @@ $raspberry: #8e24aa;
 $deep-purple: #673ab7;
 $light-blue: #3949ab;
 $red: #f44336;
+$light-red: #EF5350;
 $yellow: #ff9800;
 $pure-white: #ffffff;
 $support-block-background: #00838f;
