--- a/src/assets/scss/0_helpers/buttons.scss
+++ b/src/assets/scss/0_helpers/buttons.scss
@@ -30,6 +30,7 @@
           &:focus {
             background-color: saturate($color, $percent-saturation);
             border-color: saturate($color, $percent-saturation);
+            transition: all .5s;
           }
         } @else {
           &:hover,
@@ -50,6 +51,14 @@
   @each $type, $size in $sized-btn {
     &.#{$type} {
       padding: $size;
+    }
+  }
+
+  &--shadow-hover {
+    transition: all 700ms cubic-bezier(0.785, 0.135, 0.150, 0.860);
+    transition-timing-function: cubic-bezier(0.785, 0.135, 0.150, 0.860);
+    &:hover {
+      box-shadow: 0 2px 10px 1px rgba(0, 0, 0, 0.19), 0 5px 10px 2px rgba(0, 0, 0, 0.15);
     }
   }
 }
