--- a/src/assets/scss/_index.scss
+++ b/src/assets/scss/_index.scss
@@ -10,10 +10,12 @@
 @import "2_blocks/slider-block.scss";
 @import "2_blocks/features-block.scss";
 @import "2_blocks/about-block.scss";
+@import "2_blocks/user-words-block.scss";
 
 @import "3_components/header/logo.scss";
 @import "3_components/header/navigation.scss";
 @import "3_components/header/dropdown-block.scss";
 @import "3_components/slider/slider.scss";
 @import "3_components/slider/indicators.scss";
-@import "3_components/features/info-block";
+@import "3_components/features/info-block.scss";
+@import "3_components/user-words/parallax.scss";
