--- a/src/assets/scss/1_layout/layout.scss
+++ b/src/assets/scss/1_layout/layout.scss
@@ -4,6 +4,8 @@
 
 html {
   height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -11,6 +13,8 @@ body {
   height: auto;
   min-height: 100%;
   min-width: 320*$rem;
+  margin: 0;
+  padding: 0;
   font-family: $main-font-family;
   font-weight: 500;
   font-size: 15*$rem;
