--- a/src/assets/scss/3_components/user-words/parallax.scss
+++ b/src/assets/scss/3_components/user-words/parallax.scss
@@ -1,30 +1,17 @@
 .parallax {
-  height: 100vh;
-  overflow-x: hidden;
-  overflow-y: auto;
-  perspective: 1px;
+  height: 100%;
+  width: 100%;
+  position: relative;
+  overflow: hidden;
 
-  &__layer {
-    padding: 100vh 0;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-
-    &--base {
-      transform: translateZ(0);
-    }
-
-    &--back {
-      transform: translateZ(-1px);
-    }
-  }
-
-  .title {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+  .new-paralax {
+    z-index: -100000;
+    @include backgrounds();
+    height: 100%;
+    width: 100%;
+    position: relative;
+    transform: scale(1.3);
+    background-color: #f55;
+    background-image: url('https://visualhunt.com/photos/xl/2/aerial-view-of-coffee-cup-on-wooden-table.jpg');
   }
 }
