--- a/src/assets/scss/3_components/user-words/parallax.scss
+++ b/src/assets/scss/3_components/user-words/parallax.scss
@@ -4,14 +4,14 @@
   position: relative;
   overflow: hidden;
 
-  .new-paralax {
+  .new-parallax {
     z-index: -100000;
     @include backgrounds();
     height: 100%;
     width: 100%;
     position: relative;
-    transform: scale(1.3);
-    background-color: #f55;
-    background-image: url('https://visualhunt.com/photos/xl/2/aerial-view-of-coffee-cup-on-wooden-table.jpg');
+    //transform: scale(1.3);
+    //background-color: #f55; add color to mix it with background
+    background-image: url('/src/assets/media/images/parallax/poly-bg03.jpg');
   }
 }
