--- a/src/assets/scss/_index.scss
+++ b/src/assets/scss/_index.scss
@@ -19,3 +19,4 @@
 @import "3_components/slider/indicators.scss";
 @import "3_components/features/info-block.scss";
 @import "3_components/user-words/parallax.scss";
+@import "3_components/user-words/recall.scss";
