--- a/src/assets/scss/3_components/user-words/parallax.scss
+++ b/src/assets/scss/3_components/user-words/parallax.scss
@@ -3,6 +3,20 @@
   width: 100%;
   position: relative;
   overflow: hidden;
+  color: $pure-white;
+
+  &__row {
+    display: flex;
+    justify-content: center;
+  }
+
+  h2 {
+    margin: 0 0 10px 0;
+    text-align: center;
+    font-weight: normal;
+  }
+
+  p { text-align: center; }
 
   .new-parallax {
     z-index: -100000;
@@ -10,6 +24,7 @@
     height: 100%;
     width: 100%;
     position: relative;
+    padding: 40*$rem 0;
     //transform: scale(1.3);
     //background-color: #f55; add color to mix it with background
     background-image: url('/src/assets/media/images/parallax/poly-bg03.jpg');
