--- a/src/assets/scss/0_helpers/buttons.scss
+++ b/src/assets/scss/0_helpers/buttons.scss
@@ -55,10 +55,6 @@
   }
 
   &--shadow-hover {
-    transition: all 700ms cubic-bezier(0.785, 0.135, 0.150, 0.860);
-    transition-timing-function: cubic-bezier(0.785, 0.135, 0.150, 0.860);
-    &:hover {
-      box-shadow: 0 2px 10px 1px rgba(0, 0, 0, 0.19), 0 5px 10px 2px rgba(0, 0, 0, 0.15);
-    }
+    @extend %shadow-hover
   }
 }
