--- a/src/assets/scss/3_components/user-words/parallax.scss
+++ b/src/assets/scss/3_components/user-words/parallax.scss
@@ -7,7 +7,12 @@
 
   &__row {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+
+    .recall {
+      width: 49%;
+      height: auto;
+    }
   }
 
   h2 {
@@ -16,17 +21,23 @@
     font-weight: normal;
   }
 
-  p { text-align: center; }
+  p {
+    text-align: center;
+  }
 
   .new-parallax {
-    z-index: -100000;
+    //z-index: -100000;
     @include backgrounds();
     height: 100%;
     width: 100%;
     position: relative;
-    padding: 40*$rem 0;
+    padding: 80*$rem 15*$rem;
     //transform: scale(1.3);
     //background-color: #f55; add color to mix it with background
     background-image: url('/src/assets/media/images/parallax/poly-bg03.jpg');
+
+    &__content {
+      margin-bottom: 80*$rem;
+    }
   }
 }
