--- a/src/assets/scss/3_components/user-words/recall.scss
+++ b/src/assets/scss/3_components/user-words/recall.scss
@@ -1,3 +1,53 @@
 .recall {
-  
+  @extend %convex-lower-shadow;
+  @extend %shadow-hover;
+
+  display: flex;
+  justify-content: center;
+  padding: 40*$rem 20*$rem 20*$rem 20*$rem;
+  line-height: 1.5;
+  //width: 630px;
+  //height: 300px;
+  background-color: $pure-white;
+
+  &__media {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    width: 35%;
+    margin-right: 2%;
+
+    p {
+      color: $light-black;
+      font-style: italic;
+    }
+  }
+
+  &__avatar {
+    background-image: url('/src/assets/media/images/parallax/poly-bg03.jpg');
+    background-size: cover;
+    background-position: center;
+    width: 180px;
+    height: 180px;
+    border-radius: 48%;
+  }
+
+  &__text {
+    width: 65%;
+    display: flex;
+    flex-flow: column;
+    align-items: start;
+
+    h3 {
+      color: $light-red;
+      font-weight: normal;
+      margin: 0;
+      margin-bottom: 10*$rem;
+    }
+
+    p {
+      color: $pure-black;
+      text-align: left;
+    }
+  }
 }
