added round btn

--- a/src/assets/scss/0_helpers/buttons.scss
+++ b/src/assets/scss/0_helpers/buttons.scss
@@ -54,6 +54,15 @@
     }
   }
 
+  &--round {
+    border-radius: 50%;
+
+    &-big {
+      width: 60*$rem;
+      height: 60*$rem;
+    }
+  }
+
   &--shadow-hover {
     @extend %shadow-hover
   }
