--- a/src/assets/scss/3_components/user-words/recall.scss
+++ b/src/assets/scss/3_components/user-words/recall.scss
@@ -53,7 +53,7 @@
     }
 
     h3 {
-      color: $light-red;
+      color: $red;
       font-weight: normal;
       margin: 0;
       margin-bottom: 10*$rem;
