added new svg component && added styles for round btn

--- a/src/assets/scss/3_components/user-words/parallax.scss
+++ b/src/assets/scss/3_components/user-words/parallax.scss
@@ -9,6 +9,17 @@
     margin-bottom: 40*$rem;
   }
 
+  .btn {
+    position: relative;
+
+    svg {
+      position: absolute;
+      top: 34%;
+      left: 35.6%;
+      fill: $pure-white;
+    }
+  }
+
   &__row {
     display: flex;
     justify-content: space-between;
