added styles and components

--- a/src/assets/scss/_index.scss
+++ b/src/assets/scss/_index.scss
@@ -21,3 +21,4 @@
 @import "3_components/features/info-block.scss";
 @import "3_components/user-words/parallax.scss";
 @import "3_components/user-words/recall.scss";
+@import "3_components/support-block/switcher.scss";
