--- a/src/assets/scss/0_helpers/variables.scss
+++ b/src/assets/scss/0_helpers/variables.scss
@@ -7,6 +7,7 @@ $second-bg-color: #fafafa;
 $pure-black: #000;
 $light-black: #212121;
 $grey: #9e9e9e;
+$light-grey: #e6e6e6;
 $dark-grey: #444;
 $strange-gray: #bdbdbd;
 $services-header: #00838f;
