added styles for switcher

--- a/src/assets/scss/0_helpers/variables.scss
+++ b/src/assets/scss/0_helpers/variables.scss
@@ -10,7 +10,6 @@ $grey: #9e9e9e;
 $light-grey: #e6e6e6;
 $dark-grey: #444;
 $strange-gray: #bdbdbd;
-$services-header: #00838f;
 $pink: #e91e63;
 $raspberry: #8e24aa;
 $deep-purple: #673ab7;
@@ -20,6 +19,9 @@ $light-red: #EF5350;
 $yellow: #ff9800;
 $pure-white: #ffffff;
 $support-block-background: #00838f;
+$lever-active: #84c7c1;
+$lever-default: #818181;
+$lever-circle: #F1F1F1;
 $lower-blocks-background: #37474f;
 $up-button-background: #455a64;
 $copyright-bg-color: #263238;
