added styles for switcher active

--- a/src/assets/scss/3_components/support-block/switcher.scss
+++ b/src/assets/scss/3_components/support-block/switcher.scss
@@ -33,5 +33,13 @@
       background-color: $lever-circle;
       box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.4);
     }
+
+    &--active {
+      background-color: $lever-active;
+
+      &:after {
+        background-color: $lever-active;
+      }
+    }
   }
 }
