--- a/src/assets/scss/2_blocks/support-block.scss
+++ b/src/assets/scss/2_blocks/support-block.scss
@@ -58,7 +58,20 @@
   }
 
   &__media {
+    position: relative;
+    height: 0;
     flex-basis: 60%;
+    padding-bottom: 30%;
+    padding-top: 30*$rem;
+    overflow: hidden;
     background-color: green;
+
+    iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
   }
 }
