added base structure for new block

--- a/src/assets/scss/_index.scss
+++ b/src/assets/scss/_index.scss
@@ -12,6 +12,7 @@
 @import "2_blocks/about-block.scss";
 @import "2_blocks/user-words-block.scss";
 @import "2_blocks/support-block.scss";
+@import "2_blocks/details-block.scss";
 
 @import "3_components/header/logo.scss";
 @import "3_components/header/navigation.scss";
@@ -22,3 +23,4 @@
 @import "3_components/user-words/parallax.scss";
 @import "3_components/user-words/recall.scss";
 @import "3_components/support-block/switcher.scss";
+@import "3_components/details/details-info-block.scss";
