--- a/src/assets/scss/_index.scss
+++ b/src/assets/scss/_index.scss
@@ -13,6 +13,7 @@
 @import "2_blocks/user-words-block.scss";
 @import "2_blocks/support-block.scss";
 @import "2_blocks/details-block.scss";
+@import "2_blocks/showcase-block.scss";
 
 @import "3_components/header/logo.scss";
 @import "3_components/header/navigation.scss";
