--- a/src/assets/scss/_index.scss
+++ b/src/assets/scss/_index.scss
@@ -25,3 +25,4 @@
 @import "3_components/user-words/recall.scss";
 @import "3_components/support-block/switcher.scss";
 @import "3_components/details/details-info-block.scss";
+@import "3_components/showcase/presentation-header.scss";
