added new components && added styles for block components

--- a/src/assets/scss/_index.scss
+++ b/src/assets/scss/_index.scss
@@ -13,6 +13,7 @@
 @import "2_blocks/user-words-block.scss";
 @import "2_blocks/support-block.scss";
 @import "2_blocks/details-block.scss";
+@import "2_blocks/showcase-block.scss";
 
 @import "3_components/header/logo.scss";
 @import "3_components/header/navigation.scss";
@@ -24,3 +25,4 @@
 @import "3_components/user-words/recall.scss";
 @import "3_components/support-block/switcher.scss";
 @import "3_components/details/details-info-block.scss";
+@import "3_components/showcase/showcase-card.scss";
